--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,94 @@
+@font-face {
+    font-family: "IBM-regular";
+    src: url(./assets/fonts/IBMPlexSans-Regular.ttf);
+}
+
+@font-face {
+    font-family: "Headers";
+    src: url(./assets/fonts/BebasNeue-Regular.ttf);
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: IBM-regular, Georgia, 'Times New Roman', Times, serif;
+    --accent-color: rgb(6, 126, 154);
+}
+
+h1, h2, h3 {
+    font-family: Headers, Georgia, 'Times New Roman', Times, serif;
+}
+
+h1{
+    font-size: 3.5rem;
+}
+
+h2{
+    text-align: center;
+    font-size: 2.5rem;
+}
+
+p{
+    color: rgb(48, 48, 48);
+    font-size: 1.2rem;
+}
+
+p.reach-out{
+    font-size: 1.5rem;
+}
+
+body{
+   background-color:whitesmoke;
+}
+
+div.hero, div.about-me, div.work, div.contact-me{
+    padding: 1.3rem;
+}
+
+div.about-me, div.work, div.contact-me{
+    margin-top: 4rem;
+}
+
+.headers {
+    font-family: Headers, Georgia, 'Times New Roman', Times, serif;
+}
+
 img.hero-img {
     max-width: 100%;
 }
 
-img.github-icon {
-    max-width: 50px;
+picture{
+    max-width: calc(100% - 2rem);
+}
+
+img.project-img {
+    max-width: 100%;
+}
+
+img.icon {
+    width: 45px;
+}
+
+img.arrow {
+    max-width: 1rem;
+    transition: transform .25s ease-in .2s;
+}
+
+a.fake-span {
+    display: flex;
+    transition: transform .25s ease-out .2s;
+}
+
+a.fake-span:hover {
+    transform: scale(1.2);
+}
+
+a.fake-span:hover > img.arrow {
+    transform: rotate(45deg);
+}
+
+img.contact-me-img {
+    max-width: 100%;
 }
 
 a, a:hover, a:focus, a:active{
@@ -11,20 +96,94 @@ a, a:hover, a:focus, a:active{
     color: inherit;
 }
 
+a{
+    transition: transform .25s ease-in .2s;
+}
+
+a:hover {
+    transform: scale(1.3);
+}
+
 ul{
     list-style-type: none;
+    font-size: 1.2rem;
 }
 
-button.github-button {
-    width: 40%;
-    height: 30px;
+li.list-link {
+    min-width: 6.5rem;
+}
+
+div.about-me > p{
+    font-size: 1.5rem;
+}
+
+div#projects-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 30px;
+    font-size: 1.2rem;
+    padding-top: 2rem;
+}
+
+div.project{
+    box-shadow: 1px 1px 2px 3px lightgrey;
+}
+
+div.p-content{
+    padding: .8rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: .75rem;
+}
+
+div.hero{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: linear-gradient(148deg, var(--accent-color) 60%, rgba(0, 0, 0, 0) 60%);
+}
+
+div.icon-container{
     display: flex;
     justify-content: center;
-    align-items: center;
+    gap: 2rem;
+    padding: 2rem;
 }
 
-img.github-icon-button {
-    max-width: 15px;
+ul.project-links{
+    display: flex;
+    justify-content: flex-end;
+    gap: .75rem;
+}
+
+h3.project-title{
+    text-align: center;
+    font-size: 1.7rem;
+}
+
+div.contact-me{
+    background-color: var(--accent-color);
+    color: whitesmoke;
+}
+
+div.contact-text{
+    padding-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+div.contact-text > p{
+    color: inherit;
+}
+
+div.about-me{
+    display: flex;
+    flex-direction: column;
+    gap:2rem;
 }
 
 @media (min-width: 1024px) {
