--- a/styles.css
+++ b/styles.css
@@ -231,9 +231,6 @@ div.contact-text > p{
 }
 
 @media (min-width: 1024px) {
-    img.hero-img {
-        max-height: 700px;
-    }
 
     div.main, div.work, div.contact-wrapper{
         padding: 3rem;
@@ -244,12 +241,30 @@ div.contact-text > p{
         width: 100%;
         display: grid;
         justify-content: center;
-        background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 76.2%, var(--accent-color) 76.2%, var(--accent-color) 100%);
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 72.2%, var(--accent-color) 72.2%, var(--accent-color) 100%);
     }
 
     div.icon-container.top{
         display: flex;
     }
 
+    div.main{
+        display: grid;
+        grid-template-columns: 1.5fr 1fr;
+        justify-content: center;
+        align-items: center;
+    }
+
+    div.about-me{
+        z-index: -1;
+    }
+
+    div.hero {
+        max-height: 540px;
+    }
+
+    body{
+        background: linear-gradient(165deg, var(--accent-color) 25%, rgba(0, 0, 0, 0) 25%);
+    }
 
 }
